--- a/day01/dune
+++ b/day01/dune
@@ -1,13 +1,20 @@
 (library
  (name day01)
- (public_name aof.day01)
- (modules safe_dial)
- (libraries hardcaml aof.common)
+ (public_name advent_of_fpga.day01)
+ (modules safe_dial solver)
+ (libraries hardcaml common)
 )
 
 (executable
- (name sim)
- (public_name aof.day01.sim)
- (modules sim)
- (libraries day01 hardcaml aof.common)
+ (name puzzle1)
+ (public_name advent_of_fpga.day01_puzzle1)
+ (modules puzzle1)
+ (libraries day01)
+)
+
+(executable
+ (name puzzle2)
+ (public_name advent_of_fpga.day01_puzzle2)
+ (modules puzzle2)
+ (libraries day01)
 )
