--- a/day01/dune
+++ b/day01/dune
@@ -1,7 +1,7 @@
 (library
  (name day01)
  (public_name advent_of_fpga.day01)
- (modules safe_dial solver)
+ (modules safe_dial solver hardware)
  (libraries hardcaml common)
 )
 
