--- a/day01/dune
+++ b/day01/dune
@@ -1,8 +1,9 @@
 (library
  (name day01)
  (public_name advent_of_fpga.day01)
- (modules safe_dial solver hardware)
+ (modules safe_dial solver )
  (libraries hardcaml common)
+ (preprocess (pps hardcaml.ppx_hardcaml0))
 )
 
 (executable
@@ -18,3 +19,14 @@
  (modules puzzle2)
  (libraries day01)
 )
+
+(executable
+ (name sim)
+ (public_name advent_of_fpga.day01_sim)
+ (modules sim)
+ (libraries day01 hardcaml))
+
+(test
+ (name test_day01)
+ (modules test_day01)
+ (libraries day01 hardcaml))
